--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
-
+@import "normalize.css";
+/* @import "sanitize.css"; */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
